src/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT1
    COMMENT2
    COMMENT
    CONSTANT5
    CONSTANT4
    CONSTANT6
    CONSTANT1
    CONSTANT3
    CONSTANT2
    CONSTANT7

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     primary_expression -> IDENTIFIER
Rule 4     primary_expression -> CONSTANT
Rule 5     primary_expression -> STRING_LITERAL
Rule 6     primary_expression -> ( expression )
Rule 7     postfix_expression -> primary_expression
Rule 8     postfix_expression -> postfix_expression [ expression ]
Rule 9     postfix_expression -> postfix_expression ( )
Rule 10    postfix_expression -> postfix_expression ( argument_expression_list )
Rule 11    postfix_expression -> postfix_expression . IDENTIFIER
Rule 12    postfix_expression -> postfix_expression PTR_OP IDENTIFIER
Rule 13    postfix_expression -> postfix_expression INC_OP
Rule 14    postfix_expression -> postfix_expression DEC_OP
Rule 15    argument_expression_list -> assignment_expression
Rule 16    argument_expression_list -> argument_expression_list , assignment_expression
Rule 17    unary_expression -> postfix_expression
Rule 18    unary_expression -> INC_OP unary_expression
Rule 19    unary_expression -> DEC_OP unary_expression
Rule 20    unary_expression -> unary_operator cast_expression
Rule 21    unary_expression -> SIZEOF unary_expression
Rule 22    unary_expression -> SIZEOF ( type_name )
Rule 23    unary_operator -> &
Rule 24    unary_operator -> *
Rule 25    unary_operator -> +
Rule 26    unary_operator -> -
Rule 27    unary_operator -> ~
Rule 28    unary_operator -> !
Rule 29    cast_expression -> unary_expression
Rule 30    cast_expression -> ( type_name ) cast_expression
Rule 31    multiplicative_expression -> cast_expression
Rule 32    multiplicative_expression -> multiplicative_expression * cast_expression
Rule 33    multiplicative_expression -> multiplicative_expression / cast_expression
Rule 34    multiplicative_expression -> multiplicative_expression % cast_expression
Rule 35    additive_expression -> multiplicative_expression
Rule 36    additive_expression -> additive_expression + multiplicative_expression
Rule 37    additive_expression -> additive_expression - multiplicative_expression
Rule 38    shift_expression -> additive_expression
Rule 39    shift_expression -> shift_expression LEFT_OP additive_expression
Rule 40    shift_expression -> shift_expression RIGHT_OP additive_expression
Rule 41    relational_expression -> shift_expression
Rule 42    relational_expression -> relational_expression < shift_expression
Rule 43    relational_expression -> relational_expression > shift_expression
Rule 44    relational_expression -> relational_expression LE_OP shift_expression
Rule 45    relational_expression -> relational_expression GE_OP shift_expression
Rule 46    equality_expression -> relational_expression
Rule 47    equality_expression -> equality_expression EQ_OP relational_expression
Rule 48    equality_expression -> equality_expression NE_OP relational_expression
Rule 49    and_expression -> equality_expression
Rule 50    and_expression -> and_expression & equality_expression
Rule 51    exclusive_or_expression -> and_expression
Rule 52    exclusive_or_expression -> exclusive_or_expression ^ and_expression
Rule 53    inclusive_or_expression -> exclusive_or_expression
Rule 54    inclusive_or_expression -> inclusive_or_expression | exclusive_or_expression
Rule 55    logical_and_expression -> inclusive_or_expression
Rule 56    logical_and_expression -> logical_and_expression AND_OP inclusive_or_expression
Rule 57    logical_or_expression -> logical_and_expression
Rule 58    logical_or_expression -> logical_or_expression OR_OP logical_and_expression
Rule 59    conditional_expression -> logical_or_expression
Rule 60    conditional_expression -> logical_or_expression ? expression : conditional_expression
Rule 61    assignment_expression -> conditional_expression
Rule 62    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 63    assignment_operator -> =
Rule 64    assignment_operator -> MUL_ASSIGN
Rule 65    assignment_operator -> DIV_ASSIGN
Rule 66    assignment_operator -> MOD_ASSIGN
Rule 67    assignment_operator -> ADD_ASSIGN
Rule 68    assignment_operator -> SUB_ASSIGN
Rule 69    assignment_operator -> LEFT_ASSIGN
Rule 70    assignment_operator -> RIGHT_ASSIGN
Rule 71    assignment_operator -> AND_ASSIGN
Rule 72    assignment_operator -> XOR_ASSIGN
Rule 73    assignment_operator -> OR_ASSIGN
Rule 74    expression -> assignment_expression
Rule 75    expression -> expression , assignment_expression
Rule 76    constant_expression -> conditional_expression
Rule 77    declaration -> declaration_specifiers ;
Rule 78    declaration -> declaration_specifiers init_declarator_list ;
Rule 79    declaration_specifiers -> storage_class_specifier
Rule 80    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 81    declaration_specifiers -> type_specifier
Rule 82    declaration_specifiers -> type_specifier declaration_specifiers
Rule 83    declaration_specifiers -> type_qualifier
Rule 84    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 85    init_declarator_list -> init_declarator
Rule 86    init_declarator_list -> init_declarator_list , init_declarator
Rule 87    init_declarator -> declarator
Rule 88    init_declarator -> declarator = initializer
Rule 89    storage_class_specifier -> TYPEDEF
Rule 90    storage_class_specifier -> EXTERN
Rule 91    storage_class_specifier -> STATIC
Rule 92    storage_class_specifier -> AUTO
Rule 93    storage_class_specifier -> REGISTER
Rule 94    type_specifier -> VOID
Rule 95    type_specifier -> CHAR
Rule 96    type_specifier -> SHORT
Rule 97    type_specifier -> INT
Rule 98    type_specifier -> LONG
Rule 99    type_specifier -> FLOAT
Rule 100   type_specifier -> DOUBLE
Rule 101   type_specifier -> SIGNED
Rule 102   type_specifier -> UNSIGNED
Rule 103   type_specifier -> struct_or_union_specifier
Rule 104   type_specifier -> enum_specifier
Rule 105   type_specifier -> TYPE_NAME
Rule 106   struct_or_union_specifier -> struct_or_union IDENTIFIER { struct_declaration_list }
Rule 107   struct_or_union_specifier -> struct_or_union { struct_declaration_list }
Rule 108   struct_or_union_specifier -> struct_or_union IDENTIFIER
Rule 109   struct_or_union -> STRUCT
Rule 110   struct_or_union -> UNION
Rule 111   struct_declaration_list -> struct_declaration
Rule 112   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 113   struct_declaration -> specifier_qualifier_list struct_declarator_list ;
Rule 114   specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 115   specifier_qualifier_list -> type_specifier
Rule 116   specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 117   specifier_qualifier_list -> type_qualifier
Rule 118   struct_declarator_list -> struct_declarator
Rule 119   struct_declarator_list -> struct_declarator_list , struct_declarator
Rule 120   struct_declarator -> declarator
Rule 121   struct_declarator -> : constant_expression
Rule 122   struct_declarator -> declarator : constant_expression
Rule 123   enum_specifier -> ENUM { enumerator_list }
Rule 124   enum_specifier -> ENUM IDENTIFIER { enumerator_list }
Rule 125   enum_specifier -> ENUM IDENTIFIER
Rule 126   enumerator_list -> enumerator
Rule 127   enumerator_list -> enumerator_list , enumerator
Rule 128   enumerator -> IDENTIFIER
Rule 129   enumerator -> IDENTIFIER = constant_expression
Rule 130   type_qualifier -> CONST
Rule 131   type_qualifier -> VOLATILE
Rule 132   declarator -> pointer direct_declarator
Rule 133   declarator -> direct_declarator
Rule 134   direct_declarator -> IDENTIFIER
Rule 135   direct_declarator -> ( declarator )
Rule 136   direct_declarator -> direct_declarator [ constant_expression ]
Rule 137   direct_declarator -> direct_declarator [ ]
Rule 138   direct_declarator -> direct_declarator ( parameter_type_list )
Rule 139   direct_declarator -> direct_declarator ( identifier_list )
Rule 140   direct_declarator -> direct_declarator ( )
Rule 141   pointer -> *
Rule 142   pointer -> * type_qualifier_list
Rule 143   pointer -> * pointer
Rule 144   pointer -> * type_qualifier_list pointer
Rule 145   type_qualifier_list -> type_qualifier
Rule 146   type_qualifier_list -> type_qualifier_list type_qualifier
Rule 147   parameter_type_list -> parameter_list
Rule 148   parameter_type_list -> parameter_list , ELLIPSIS
Rule 149   parameter_list -> parameter_declaration
Rule 150   parameter_list -> parameter_list , parameter_declaration
Rule 151   parameter_declaration -> declaration_specifiers declarator
Rule 152   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 153   parameter_declaration -> declaration_specifiers
Rule 154   identifier_list -> IDENTIFIER
Rule 155   identifier_list -> identifier_list , IDENTIFIER
Rule 156   type_name -> specifier_qualifier_list
Rule 157   type_name -> specifier_qualifier_list abstract_declarator
Rule 158   abstract_declarator -> pointer
Rule 159   abstract_declarator -> direct_abstract_declarator
Rule 160   abstract_declarator -> pointer direct_abstract_declarator
Rule 161   direct_abstract_declarator -> ( abstract_declarator )
Rule 162   direct_abstract_declarator -> [ ]
Rule 163   direct_abstract_declarator -> [ constant_expression ]
Rule 164   direct_abstract_declarator -> direct_abstract_declarator [ ]
Rule 165   direct_abstract_declarator -> direct_abstract_declarator [ constant_expression ]
Rule 166   direct_abstract_declarator -> ( )
Rule 167   direct_abstract_declarator -> ( parameter_type_list )
Rule 168   direct_abstract_declarator -> direct_abstract_declarator ( )
Rule 169   direct_abstract_declarator -> direct_abstract_declarator ( parameter_type_list )
Rule 170   initializer -> assignment_expression
Rule 171   initializer -> { initializer_list }
Rule 172   initializer -> { initializer_list , }
Rule 173   initializer_list -> initializer
Rule 174   initializer_list -> initializer_list , initializer
Rule 175   statement -> labeled_statement
Rule 176   statement -> compound_statement
Rule 177   statement -> expression_statement
Rule 178   statement -> selection_statement
Rule 179   statement -> iteration_statement
Rule 180   statement -> jump_statement
Rule 181   labeled_statement -> IDENTIFIER : statement
Rule 182   labeled_statement -> CASE constant_expression : statement
Rule 183   labeled_statement -> DEFAULT : statement
Rule 184   compound_statement -> { }
Rule 185   compound_statement -> { statement_list }
Rule 186   compound_statement -> { declaration_list }
Rule 187   compound_statement -> { declaration_list statement_list }
Rule 188   declaration_list -> declaration
Rule 189   declaration_list -> declaration_list declaration
Rule 190   statement_list -> statement
Rule 191   statement_list -> statement_list statement
Rule 192   expression_statement -> ;
Rule 193   expression_statement -> expression ;
Rule 194   selection_statement -> IF ( expression ) statement
Rule 195   selection_statement -> IF ( expression ) statement ELSE statement
Rule 196   selection_statement -> SWITCH ( expression ) statement
Rule 197   iteration_statement -> WHILE ( expression ) statement
Rule 198   iteration_statement -> DO statement WHILE ( expression ) ;
Rule 199   iteration_statement -> FOR ( expression_statement expression_statement ) statement
Rule 200   iteration_statement -> FOR ( expression_statement expression_statement expression ) statement
Rule 201   jump_statement -> GOTO IDENTIFIER ;
Rule 202   jump_statement -> CONTINUE ;
Rule 203   jump_statement -> BREAK ;
Rule 204   jump_statement -> RETURN ;
Rule 205   jump_statement -> RETURN expression ;
Rule 206   external_declaration -> function_definition
Rule 207   external_declaration -> declaration
Rule 208   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 209   function_definition -> declaration_specifiers declarator compound_statement
Rule 210   function_definition -> declarator declaration_list compound_statement
Rule 211   function_definition -> declarator compound_statement

Terminals, with rules where they appear

!                    : 28
%                    : 34
&                    : 23 50
(                    : 6 9 10 22 30 135 138 139 140 161 166 167 168 169 194 195 196 197 198 199 200
)                    : 6 9 10 22 30 135 138 139 140 161 166 167 168 169 194 195 196 197 198 199 200
*                    : 24 32 141 142 143 144
+                    : 25 36
,                    : 16 75 86 119 127 148 150 155 172 174
-                    : 26 37
.                    : 11
/                    : 33
:                    : 60 121 122 181 182 183
;                    : 77 78 113 192 193 198 201 202 203 204 205
<                    : 42
=                    : 63 88 129
>                    : 43
?                    : 60
ADD_ASSIGN           : 67
AND_ASSIGN           : 71
AND_OP               : 56
AUTO                 : 92
BREAK                : 203
CASE                 : 182
CHAR                 : 95
COMMENT              : 
COMMENT1             : 
COMMENT2             : 
CONST                : 130
CONSTANT             : 4
CONSTANT1            : 
CONSTANT2            : 
CONSTANT3            : 
CONSTANT4            : 
CONSTANT5            : 
CONSTANT6            : 
CONSTANT7            : 
CONTINUE             : 202
DEC_OP               : 14 19
DEFAULT              : 183
DIV_ASSIGN           : 65
DO                   : 198
DOUBLE               : 100
ELLIPSIS             : 148
ELSE                 : 195
ENUM                 : 123 124 125
EQ_OP                : 47
EXTERN               : 90
FLOAT                : 99
FOR                  : 199 200
GE_OP                : 45
GOTO                 : 201
IDENTIFIER           : 3 11 12 106 108 124 125 128 129 134 154 155 181 201
IF                   : 194 195
INC_OP               : 13 18
INT                  : 97
LEFT_ASSIGN          : 69
LEFT_OP              : 39
LE_OP                : 44
LONG                 : 98
MOD_ASSIGN           : 66
MUL_ASSIGN           : 64
NE_OP                : 48
OR_ASSIGN            : 73
OR_OP                : 58
PTR_OP               : 12
REGISTER             : 93
RETURN               : 204 205
RIGHT_ASSIGN         : 70
RIGHT_OP             : 40
SHORT                : 96
SIGNED               : 101
SIZEOF               : 21 22
STATIC               : 91
STRING_LITERAL       : 5
STRUCT               : 109
SUB_ASSIGN           : 68
SWITCH               : 196
TYPEDEF              : 89
TYPE_NAME            : 105
UNION                : 110
UNSIGNED             : 102
VOID                 : 94
VOLATILE             : 131
WHILE                : 197 198
XOR_ASSIGN           : 72
[                    : 8 136 137 162 163 164 165
]                    : 8 136 137 162 163 164 165
^                    : 52
error                : 
{                    : 106 107 123 124 171 172 184 185 186 187
|                    : 54
}                    : 106 107 123 124 171 172 184 185 186 187
~                    : 27

Nonterminals, with rules where they appear

abstract_declarator  : 152 157 161
additive_expression  : 36 37 38 39 40
and_expression       : 50 51 52
argument_expression_list : 10 16
assignment_expression : 15 16 62 74 75 170
assignment_operator  : 62
cast_expression      : 20 30 31 32 33 34
compound_statement   : 176 208 209 210 211
conditional_expression : 60 61 76
constant_expression  : 121 122 129 136 163 165 182
declaration          : 188 189 207
declaration_list     : 186 187 189 208 210
declaration_specifiers : 77 78 80 82 84 151 152 153 208 209
declarator           : 87 88 120 122 135 151 208 209 210 211
direct_abstract_declarator : 159 160 164 165 168 169
direct_declarator    : 132 133 136 137 138 139 140
enum_specifier       : 104
enumerator           : 126 127
enumerator_list      : 123 124 127
equality_expression  : 47 48 49 50
exclusive_or_expression : 52 53 54
expression           : 6 8 60 75 193 194 195 196 197 198 200 205
expression_statement : 177 199 199 200 200
external_declaration : 1 2
function_definition  : 206
identifier_list      : 139 155
inclusive_or_expression : 54 55 56
init_declarator      : 85 86
init_declarator_list : 78 86
initializer          : 88 173 174
initializer_list     : 171 172 174
iteration_statement  : 179
jump_statement       : 180
labeled_statement    : 175
logical_and_expression : 56 57 58
logical_or_expression : 58 59 60
multiplicative_expression : 32 33 34 35 36 37
parameter_declaration : 149 150
parameter_list       : 147 148 150
parameter_type_list  : 138 167 169
pointer              : 132 143 144 158 160
postfix_expression   : 8 9 10 11 12 13 14 17
primary_expression   : 7
relational_expression : 42 43 44 45 46 47 48
selection_statement  : 178
shift_expression     : 39 40 41 42 43 44 45
specifier_qualifier_list : 113 114 116 156 157
statement            : 181 182 183 190 191 194 195 195 196 197 198 199 200
statement_list       : 185 187 191
storage_class_specifier : 79 80
struct_declaration   : 111 112
struct_declaration_list : 106 107 112
struct_declarator    : 118 119
struct_declarator_list : 113 119
struct_or_union      : 106 107 108
struct_or_union_specifier : 103
translation_unit     : 2 0
type_name            : 22 30
type_qualifier       : 83 84 116 117 145 146
type_qualifier_list  : 142 144 146
type_specifier       : 81 82 114 115
unary_expression     : 18 19 21 29 62
unary_operator       : 20

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (206) external_declaration -> . function_definition
    (207) external_declaration -> . declaration
    (208) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (209) function_definition -> . declaration_specifiers declarator compound_statement
    (210) function_definition -> . declarator declaration_list compound_statement
    (211) function_definition -> . declarator compound_statement
    (77) declaration -> . declaration_specifiers ;
    (78) declaration -> . declaration_specifiers init_declarator_list ;
    (79) declaration_specifiers -> . storage_class_specifier
    (80) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (83) declaration_specifiers -> . type_qualifier
    (84) declaration_specifiers -> . type_qualifier declaration_specifiers
    (132) declarator -> . pointer direct_declarator
    (133) declarator -> . direct_declarator
    (89) storage_class_specifier -> . TYPEDEF
    (90) storage_class_specifier -> . EXTERN
    (91) storage_class_specifier -> . STATIC
    (92) storage_class_specifier -> . AUTO
    (93) storage_class_specifier -> . REGISTER
    (94) type_specifier -> . VOID
    (95) type_specifier -> . CHAR
    (96) type_specifier -> . SHORT
    (97) type_specifier -> . INT
    (98) type_specifier -> . LONG
    (99) type_specifier -> . FLOAT
    (100) type_specifier -> . DOUBLE
    (101) type_specifier -> . SIGNED
    (102) type_specifier -> . UNSIGNED
    (103) type_specifier -> . struct_or_union_specifier
    (104) type_specifier -> . enum_specifier
    (105) type_specifier -> . TYPE_NAME
    (130) type_qualifier -> . CONST
    (131) type_qualifier -> . VOLATILE
    (141) pointer -> . *
    (142) pointer -> . * type_qualifier_list
    (143) pointer -> . * pointer
    (144) pointer -> . * type_qualifier_list pointer
    (134) direct_declarator -> . IDENTIFIER
    (135) direct_declarator -> . ( declarator )
    (136) direct_declarator -> . direct_declarator [ constant_expression ]
    (137) direct_declarator -> . direct_declarator [ ]
    (138) direct_declarator -> . direct_declarator ( parameter_type_list )
    (139) direct_declarator -> . direct_declarator ( identifier_list )
    (140) direct_declarator -> . direct_declarator ( )
    (106) struct_or_union_specifier -> . struct_or_union IDENTIFIER { struct_declaration_list }
    (107) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (108) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (123) enum_specifier -> . ENUM { enumerator_list }
    (124) enum_specifier -> . ENUM IDENTIFIER { enumerator_list }
    (125) enum_specifier -> . ENUM IDENTIFIER
    (109) struct_or_union -> . STRUCT
    (110) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 21
    EXTERN          shift and go to state 9
    STATIC          shift and go to state 8
    AUTO            shift and go to state 23
    REGISTER        shift and go to state 15
    VOID            shift and go to state 5
    CHAR            shift and go to state 7
    SHORT           shift and go to state 2
    INT             shift and go to state 30
    LONG            shift and go to state 17
    FLOAT           shift and go to state 27
    DOUBLE          shift and go to state 31
    SIGNED          shift and go to state 33
    UNSIGNED        shift and go to state 16
    TYPE_NAME       shift and go to state 10
    CONST           shift and go to state 3
    VOLATILE        shift and go to state 35
    *               shift and go to state 6
    IDENTIFIER      shift and go to state 19
    (               shift and go to state 14
    ENUM            shift and go to state 22
    STRUCT          shift and go to state 29
    UNION           shift and go to state 18

    storage_class_specifier        shift and go to state 1
    struct_or_union_specifier      shift and go to state 4
    pointer                        shift and go to state 11
    external_declaration           shift and go to state 12
    type_specifier                 shift and go to state 13
    struct_or_union                shift and go to state 37
    direct_declarator              shift and go to state 24
    declaration_specifiers         shift and go to state 25
    declaration                    shift and go to state 26
    function_definition            shift and go to state 28
    enum_specifier                 shift and go to state 34
    type_qualifier                 shift and go to state 32
    translation_unit               shift and go to state 20
    declarator                     shift and go to state 36

state 1

    (79) declaration_specifiers -> storage_class_specifier .
    (80) declaration_specifiers -> storage_class_specifier . declaration_specifiers
    (79) declaration_specifiers -> . storage_class_specifier
    (80) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (83) declaration_specifiers -> . type_qualifier
    (84) declaration_specifiers -> . type_qualifier declaration_specifiers
    (89) storage_class_specifier -> . TYPEDEF
    (90) storage_class_specifier -> . EXTERN
    (91) storage_class_specifier -> . STATIC
    (92) storage_class_specifier -> . AUTO
    (93) storage_class_specifier -> . REGISTER
    (94) type_specifier -> . VOID
    (95) type_specifier -> . CHAR
    (96) type_specifier -> . SHORT
    (97) type_specifier -> . INT
    (98) type_specifier -> . LONG
    (99) type_specifier -> . FLOAT
    (100) type_specifier -> . DOUBLE
    (101) type_specifier -> . SIGNED
    (102) type_specifier -> . UNSIGNED
    (103) type_specifier -> . struct_or_union_specifier
    (104) type_specifier -> . enum_specifier
    (105) type_specifier -> . TYPE_NAME
    (130) type_qualifier -> . CONST
    (131) type_qualifier -> . VOLATILE
    (106) struct_or_union_specifier -> . struct_or_union IDENTIFIER { struct_declaration_list }
    (107) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (108) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (123) enum_specifier -> . ENUM { enumerator_list }
    (124) enum_specifier -> . ENUM IDENTIFIER { enumerator_list }
    (125) enum_specifier -> . ENUM IDENTIFIER
    (109) struct_or_union -> . STRUCT
    (110) struct_or_union -> . UNION

    *               reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    IDENTIFIER      reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    (               reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    [               reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    ,               reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    )               reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    ;               reduce using rule 79 (declaration_specifiers -> storage_class_specifier .)
    TYPEDEF         shift and go to state 21
    EXTERN          shift and go to state 9
    STATIC          shift and go to state 8
    AUTO            shift and go to state 23
    REGISTER        shift and go to state 15
    VOID            shift and go to state 5
    CHAR            shift and go to state 7
    SHORT           shift and go to state 2
    INT             shift and go to state 30
    LONG            shift and go to state 17
    FLOAT           shift and go to state 27
    DOUBLE          shift and go to state 31
    SIGNED          shift and go to state 33
    UNSIGNED        shift and go to state 16
    TYPE_NAME       shift and go to state 10
    CONST           shift and go to state 3
    VOLATILE        shift and go to state 35
    ENUM            shift and go to state 22
    STRUCT          shift and go to state 29
    UNION           shift and go to state 18

    storage_class_specifier        shift and go to state 1
    struct_or_union                shift and go to state 37
    type_specifier                 shift and go to state 13
    enum_specifier                 shift and go to state 34
    struct_or_union_specifier      shift and go to state 4
    type_qualifier                 shift and go to state 32
    declaration_specifiers         shift and go to state 38

state 2

    (96) type_specifier -> SHORT .

    TYPEDEF         reduce using rule 96 (type_specifier -> SHORT .)
    EXTERN          reduce using rule 96 (type_specifier -> SHORT .)
    STATIC          reduce using rule 96 (type_specifier -> SHORT .)
    AUTO            reduce using rule 96 (type_specifier -> SHORT .)
    REGISTER        reduce using rule 96 (type_specifier -> SHORT .)
    VOID            reduce using rule 96 (type_specifier -> SHORT .)
    CHAR            reduce using rule 96 (type_specifier -> SHORT .)
    SHORT           reduce using rule 96 (type_specifier -> SHORT .)
    INT             reduce using rule 96 (type_specifier -> SHORT .)
    LONG            reduce using rule 96 (type_specifier -> SHORT .)
    FLOAT           reduce using rule 96 (type_specifier -> SHORT .)
    DOUBLE          reduce using rule 96 (type_specifier -> SHORT .)
    SIGNED          reduce using rule 96 (type_specifier -> SHORT .)
    UNSIGNED        reduce using rule 96 (type_specifier -> SHORT .)
    TYPE_NAME       reduce using rule 96 (type_specifier -> SHORT .)
    CONST           reduce using rule 96 (type_specifier -> SHORT .)
    VOLATILE        reduce using rule 96 (type_specifier -> SHORT .)
    ENUM            reduce using rule 96 (type_specifier -> SHORT .)
    STRUCT          reduce using rule 96 (type_specifier -> SHORT .)
    UNION           reduce using rule 96 (type_specifier -> SHORT .)
    ;               reduce using rule 96 (type_specifier -> SHORT .)
    *               reduce using rule 96 (type_specifier -> SHORT .)
    IDENTIFIER      reduce using rule 96 (type_specifier -> SHORT .)
    (               reduce using rule 96 (type_specifier -> SHORT .)
    :               reduce using rule 96 (type_specifier -> SHORT .)
    [               reduce using rule 96 (type_specifier -> SHORT .)
    )               reduce using rule 96 (type_specifier -> SHORT .)
    ,               reduce using rule 96 (type_specifier -> SHORT .)


state 3

    (130) type_qualifier -> CONST .

    TYPEDEF         reduce using rule 130 (type_qualifier -> CONST .)
    EXTERN          reduce using rule 130 (type_qualifier -> CONST .)
    STATIC          reduce using rule 130 (type_qualifier -> CONST .)
    AUTO            reduce using rule 130 (type_qualifier -> CONST .)
    REGISTER        reduce using rule 130 (type_qualifier -> CONST .)
    VOID            reduce using rule 130 (type_qualifier -> CONST .)
    CHAR            reduce using rule 130 (type_qualifier -> CONST .)
    SHORT           reduce using rule 130 (type_qualifier -> CONST .)
    INT             reduce using rule 130 (type_qualifier -> CONST .)
    LONG            reduce using rule 130 (type_qualifier -> CONST .)
    FLOAT           reduce using rule 130 (type_qualifier -> CONST .)
    DOUBLE          reduce using rule 130 (type_qualifier -> CONST .)
    SIGNED          reduce using rule 130 (type_qualifier -> CONST .)
    UNSIGNED        reduce using rule 130 (type_qualifier -> CONST .)
    TYPE_NAME       reduce using rule 130 (type_qualifier -> CONST .)
    CONST           reduce using rule 130 (type_qualifier -> CONST .)
    VOLATILE        reduce using rule 130 (type_qualifier -> CONST .)
    ENUM            reduce using rule 130 (type_qualifier -> CONST .)
    STRUCT          reduce using rule 130 (type_qualifier -> CONST .)
    UNION           reduce using rule 130 (type_qualifier -> CONST .)
    ;               reduce using rule 130 (type_qualifier -> CONST .)
    *               reduce using rule 130 (type_qualifier -> CONST .)
    IDENTIFIER      reduce using rule 130 (type_qualifier -> CONST .)
    (               reduce using rule 130 (type_qualifier -> CONST .)
    [               reduce using rule 130 (type_qualifier -> CONST .)
    ,               reduce using rule 130 (type_qualifier -> CONST .)
    )               reduce using rule 130 (type_qualifier -> CONST .)
    :               reduce using rule 130 (type_qualifier -> CONST .)


state 4

    (103) type_specifier -> struct_or_union_specifier .

    TYPEDEF         reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    EXTERN          reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    STATIC          reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    AUTO            reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    REGISTER        reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    VOID            reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    CHAR            reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    SHORT           reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    INT             reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    LONG            reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    FLOAT           reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    DOUBLE          reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    SIGNED          reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    UNSIGNED        reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    TYPE_NAME       reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    CONST           reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    VOLATILE        reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    ENUM            reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    STRUCT          reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    UNION           reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    ;               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    *               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    IDENTIFIER      reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    (               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    :               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    [               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    )               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)
    ,               reduce using rule 103 (type_specifier -> struct_or_union_specifier .)


state 5

    (94) type_specifier -> VOID .

    TYPEDEF         reduce using rule 94 (type_specifier -> VOID .)
    EXTERN          reduce using rule 94 (type_specifier -> VOID .)
    STATIC          reduce using rule 94 (type_specifier -> VOID .)
    AUTO            reduce using rule 94 (type_specifier -> VOID .)
    REGISTER        reduce using rule 94 (type_specifier -> VOID .)
    VOID            reduce using rule 94 (type_specifier -> VOID .)
    CHAR            reduce using rule 94 (type_specifier -> VOID .)
    SHORT           reduce using rule 94 (type_specifier -> VOID .)
    INT             reduce using rule 94 (type_specifier -> VOID .)
    LONG            reduce using rule 94 (type_specifier -> VOID .)
    FLOAT           reduce using rule 94 (type_specifier -> VOID .)
    DOUBLE          reduce using rule 94 (type_specifier -> VOID .)
    SIGNED          reduce using rule 94 (type_specifier -> VOID .)
    UNSIGNED        reduce using rule 94 (type_specifier -> VOID .)
    TYPE_NAME       reduce using rule 94 (type_specifier -> VOID .)
    CONST           reduce using rule 94 (type_specifier -> VOID .)
    VOLATILE        reduce using rule 94 (type_specifier -> VOID .)
    ENUM            reduce using rule 94 (type_specifier -> VOID .)
    STRUCT          reduce using rule 94 (type_specifier -> VOID .)
    UNION           reduce using rule 94 (type_specifier -> VOID .)
    ;               reduce using rule 94 (type_specifier -> VOID .)
    *               reduce using rule 94 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 94 (type_specifier -> VOID .)
    (               reduce using rule 94 (type_specifier -> VOID .)
    :               reduce using rule 94 (type_specifier -> VOID .)
    [               reduce using rule 94 (type_specifier -> VOID .)
    )               reduce using rule 94 (type_specifier -> VOID .)
    ,               reduce using rule 94 (type_specifier -> VOID .)


state 6
